fixed: alignment of search venue section

--- a/public/src/css/stylesheet.css
+++ b/public/src/css/stylesheet.css
@@ -232,7 +232,7 @@ h2{
 
 .middle{
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
